<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:paddingTop="50dp"
        android:text="@string/wellcome"
        android:textColor="@color/black"
        android:textSize="33sp" />

    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="5sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/select_user_please"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinnerEmployee"
            android:layout_width="300sp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/tv_spinner_result"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/users"
            android:textColor="@color/black"
            android:textSize="15sp"


            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:hint="@string/enter_password_please"
            android:inputType="textPassword"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/back_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="21sp"
            app:iconTint="@color/white"
            app:rippleColor="@color/white" />


    </LinearLayout>


</LinearLayout>